# chimitheque_traits

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  searchable.rs
